get hotel metrics finished
testing wip

mockup database implemented

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "rootDir": "./src",
+    "rootDir": "./",
+    "rootDirs": ["src", "tests"],
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
