--- a/jest.config.json
+++ b/jest.config.json
@@ -1,4 +1,5 @@
 {
+  "testTimeout": 1500000,
   "moduleFileExtensions": ["js", "json", "ts"],
   "rootDir": "./",
   "modulePaths": ["node_modules", "<rootDir>"],
