--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,6 +1,7 @@
 {
   "type": "mongodb",
   "host": "localhost",
+  "post": 27017,
   "database": "hotel-price-api",
   "synchronize": true,
   "logging": true,
