--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "scripts": {
     "cli": "ts-node src/cli.ts",
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
-    "test": "jest --verbose --config ./jest.config.json",
+    "test": "jest --verbose --detectOpenHandles --config ./jest.config.json",
+    "test:watch": "jest --watch --verbose --config ./jest.config.json",
+    "test:coverage": "jest --coverage",
     "dev": "npx ts-node-dev -r tsconfig-paths/register src/main",
     "start": "npx ts-node -r tsconfig-paths/register dist/src/main",
     "clean": "rm -rf dist build package",
@@ -21,11 +23,13 @@
     "build": "tsc -p tsconfig.build.json"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^2.2.0",
     "@types/jest": "27.0.2",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "add": "^2.0.6",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -52,6 +56,7 @@
     "moment": "^2.29.1",
     "mongodb": "^4.4.0",
     "reflect-metadata": "^0.1.13",
+    "testcontainers": "^8.2.0",
     "ts-node-dev": "^1.1.8",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.2.43",
@@ -59,7 +64,11 @@
     "yarn": "^1.22.17"
   },
   "jest": {
-    "rootDir": "./",
+    "rootDir": "test",
+    "root": [
+      "<rootDir>/src",
+      "<rootDir>/tests"
+    ],
     "modulePaths": [
       "<rootDir>"
     ],
