--- a/package.json
+++ b/package.json
@@ -12,19 +12,21 @@
   "scripts": {
     "cli": "ts-node src/cli.ts",
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
-    "test": "jest --verbose --detectOpenHandles --config ./jest.config.json",
+    "test": "ENV=test jest --verbose --detectOpenHandles --config ./jest.config.json",
     "test:watch": "jest --watch --verbose --config ./jest.config.json",
     "test:coverage": "jest --coverage",
-    "dev": "npx ts-node-dev -r tsconfig-paths/register src/main",
+    "dev": "ENV=dev npx ts-node-dev -r tsconfig-paths/register src/main",
+    "docker": "ENV=docker npx ts-node-dev -r tsconfig-paths/register src/main",
     "start": "npx ts-node -r tsconfig-paths/register dist/src/main",
     "clean": "rm -rf dist build package",
     "ts-node": "ts-node",
     "docs": "typedoc --entryPoints src/main.ts",
-    "build": "tsc -p tsconfig.build.json"
+    "build": "ts-node -p tsconfig.build.json"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^2.2.0",
     "@types/jest": "27.0.2",
+    "@types/jest-json-schema": "^6.1.0",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -44,21 +46,30 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "apollo-datasource-rest": "^3.5.1",
     "apollo-server": "^3.6.3",
+    "apollo-server-cache-redis": "^3.3.1",
+    "apollo-server-core": "3.6.3",
     "axios": "^0.26.0",
     "bcryptjs": "^2.4.3",
     "chalk": "^4.1.2",
     "class-validator": "^0.13.2",
     "cli-color": "^2.0.1",
     "dotenv": "^16.0.0",
-    "graphql": "^15.3.0",
+    "graphql": "^15.5.0",
+    "graphql-tools": "^8.2.0",
+    "ioredis": "^4.28.5",
+    "jest-json-schema": "^6.1.0",
+    "jest-json-schema-extended": "^1.0.1",
     "jsonwebtoken": "^8.5.1",
+    "md5": "^2.3.0",
     "moment": "^2.29.1",
     "mongodb": "^4.4.0",
     "reflect-metadata": "^0.1.13",
     "testcontainers": "^8.2.0",
     "ts-node-dev": "^1.1.8",
-    "type-graphql": "^1.1.1",
+    "type-graphql": "1.2.0-rc.1",
+    "typedi": "^0.10.0",
     "typeorm": "^0.2.43",
     "winston": "^3.6.0",
     "yarn": "^1.22.17"
